# KNU_FCSC_AbitBot

./: .gitignore  README.md  alembic.ini  compose.yaml  dump.sql  pyproject.toml  setup_chat_data.py
alembic/: env.py
alembic/versions/: 031277e9b543_create_trrigger_for_removing_old_.py  0ad3332dbeac_add_abitchatinfo_greeting_photo_file_id_.py  0f82d2e248c6_add_required_document_models.py  11a62d74b651_initial_revision.py  13db4998c4fa_create_user_limitation_models.py  15f5768bb6cd_make_pinguin_a_penguin_fix_typo.py  207864a00f24_create_limit_chat_member_procedure.py  2234d59848c3_add_admissioncommitteinfo_and_.py  29456d627383_create_stred_prcedure_for_removing_old_.py  2d5fb7625b09_add_missing_id_column_on_admission_.py  2dfbbf7f3371_fix_admission_timetable_validation_.py  377a6160563e_rewrite_admission_committee_timetable_.py  3a6e40f0c8d0_add_useful_link_models.py  446f086b71c5_create_is_user_limited_function.py  4bf0c28ac3a2_add_missing_id_column_to_chat_member_.py  631644d659d5_add_missing_applicantchat_model.py  63920cdc14d4_create_admission_timetable_validation_.py  72c42b9369b1_create_banned_chat_member_view.py  74e8df3a529a_fix_relationships.py  7a7f2b705b37_add_chatmember_and_sentpinguinrecord_.py  943147f1b7d5_make_the_index_on_chatmember_user_id_.py  9f4a246713b9_add_index_on_chatmember_user_id_and_.py  a86127764355_rewrite_chat_models.py  bfdbd528dedc_add_admissioncommittetimetablerecord_id_.py  c17df2059bea_create_message_models.py  c6bebcff0ca3_create_is_relatively_old_function.py  cbe92f65e781_create_user_models.py  cf7f461d7f92_add_program_models.py  cfefd4d290fd_create_web_admin_model.py  f93b4be54dc5_add_create_admin_function.py  (+2 more)
knu_fcsc_bot/: __main__.py  logginig.py  models.py  usecases.py
scripts/: collect_penguin_gif_senders.py
(+4 files in other folders)
