[tool.poetry]
name = "knu-fcsc-abitbot"
version = "0.1.0"
description = ""
authors = ["antos07 <trotsenko.ant07@gmail.com>"]
readme = "README.md"
packages = [{ include = "knu_fcsc_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = { extras = ["http2", "job-queue", "rate-limiter", "webhooks"], version = "^20.4" }
loguru = "^0.7.0"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
psycopg = { extras = ["binary"], version = "^3.1.9" }
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
