[tool.poetry]
name = "knu-fcsc-abitbot"
version = "0.1.0"
description = ""
authors = ["antos07 <trotsenko.ant07@gmail.com>"]
readme = "README.md"
packages = [{ include = "knu_fcsc_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["http2", "job-queue", "rate-limiter", "webhooks"], version = "^20.6"}
loguru = "^0.7.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg = {extras = ["binary"], version = "^3.1.12"}
python-dateutil = "^2.8.2"
tzdata = "*"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
telethon = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
